# ocafile

./: Cargo.toml  README.md
examples/: big2_example.ocafile  example.ocafile  example.ocafile.ast
ocaast/: Cargo.toml
ocaast/src/: ast.rs  lib.rs  validator.rs
ocafile/: Cargo.toml  OCAfile
ocafile/src/: main.rs  ocafile.pest
ocafile/src/ocafile/: mod.rs
ocafile/src/ocafile/instructions/: add.rs  from.rs  helpers.rs  remove.rs
src/: main.rs  ocafile.pest  ocafile_parser.rs
src/instructions/: add.rs  from.rs  mod.rs
src/ocafile/: ast.rs  error.rs  mod.rs
src/ocafile/instructions/: add.rs  from.rs  mod.rs
