[package]
name = "ocafile"
version = "0.1.0"
edition = "2021"
authors = ["Robert Mitwicki <robert.mitwicki@humancolossus.org"]
license = "EUPL-1.2"
readme = "README.md"

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
pest = "2.5.1"
pest_derive = "2.5.1"
pretty_assertions = "1.3.0"
thiserror = "1.0.38"
